@@ -8,6 +8,7 @@
 - Auto generated pub/sub client ids now include the hostname.
 - Tool for dumping persistent DB contents is available in src/db_dump. It isn't
   installed by default.
+- Enforce topic length checks in client library.
 
 0.14.3 - 20111210
 =================
